--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,24 +20,24 @@
 
 
 // Grid overlay
-a#grid-toggle {
+#grid-toggle {
 	background-color: rgba(58, 58, 58, 0.8);
-	top: 0;
+	bottom: 0;
 	color: #00CC00;
 	font-family: monospace;
 	left: 0;
 	padding: .4em 1em;
 	position: fixed;
-	text-decoration: none;
 	z-index: 9999;
 
 	@include breakpoint(break-small) {
   	width: 100%;
   }
-}
 
-#grid-overlay {
-	margin-top: -20px;
+  a {
+  	color: #fff;
+		padding: 5px;
+	}
 }
 
 
@@ -80,11 +80,9 @@ nav#main-menu {
 }
 
 
-// Main
-#main {
+// Blocks
+.block {
 	background-color: rgba(000, 000, 000, 0.1);
-
-	.block {
-		background-color: rgba(000, 000, 000, 0.2);
-	}
+	margin-bottom: 5px;
+	padding: 5px;
 }
