Updated Normalize and updated grid overlay and toggle and functionality

--- a/sass/_normalize.scss
+++ b/sass/_normalize.scss
@@ -1,15 +1,12 @@
 /* normalize.css v2.0.1 | MIT License | git.io/normalize */
 /* normalize.scss v2.0.1 | MIT/GPLv2 License | bit.ly/normalize-with-compass */
 
-// Import your project's _base.scss partial. See Compass best practices for more
-// info. http://compass-style.org/help/tutorials/best_practices/
-@import "base";
-
 
 // =============================================================================
 // Variables and Imports
 //
-// If you have a base partial, you should move these lines to your base partial.
+// If you have a base partial, you should copy/move these lines to your base
+// partial. @see http://compass-style.org/help/tutorials/best_practices/
 // =============================================================================
 
 // The base font size.
